update to synapse && typeahead. Increase focus on suggestions. Fix bugs on mobile

--- a/web/css/app/lily.css
+++ b/web/css/app/lily.css
@@ -669,7 +669,7 @@ HEADER
 .action-container {
   position: absolute;
   width: 100%;
-  min-height: 45px;
+  min-height: 68px;
   bottom: 0;
   left: 0;
   background: #fff;
@@ -679,7 +679,7 @@ HEADER
 .chat-input-component,
 .avi-input-component {
   width: 100%;
-  padding: 0 13px;
+  padding: 0;
   margin: 0;
   margin-bottom: 23px;
   display: block;
@@ -695,12 +695,12 @@ HEADER
 }
 
 .wrapper-input {
-  padding: 4px;
-  background: #e8e8e8;
-  border-radius: 3px;
+  padding: 8px 4px 0 13px;
+  background: #FFFFFF;
+  border-radius: 0;
   height: 100%;
   position: relative;
-  border: solid 1px white;
+  border-top: solid 1px rgba(136, 136, 136, 0.16);
 }
 
 .textarea-input {
@@ -711,14 +711,16 @@ HEADER
   min-height: 36px;
   max-height: 64px;
   border: 1px solid rgba(181, 181, 181, 0.25);
-  background-color: rgba(255, 255, 255, 1);
-  color: #5e5e5e;
+  background-color: rgba(232, 232, 232, 0.4);
+  color: #888888;;
   border-radius: 2px;
   line-height: 1;
   vertical-align: bottom;
   z-index: 3;
   overflow: auto;
   overflow-x: hidden;
+  outline: none;
+  -webkit-appearance: none;
 }
 
 /* Most disgusting css selector in the history of css selectors.
@@ -742,7 +744,7 @@ HEADER
 
 .btn-sendmsg {
   position: absolute;
-  bottom: 6px;
+  bottom: 3px;
   right: 5px;
   padding: 8px 7px;
   border-radius: 2px;
@@ -787,10 +789,10 @@ HEADER
   outline: none;
 }
 
-:-moz-placeholder {color: #575757;}
-::-moz-placeholder {color: #575757;}
-:ms-input-placeholder {color: #575757;}
-::-webkit-input-placeholder {color: #575757;}
+:-moz-placeholder {color: #888888;}
+::-moz-placeholder {color: #888888;}
+:ms-input-placeholder {color: #888888;}
+::-webkit-input-placeholder {color: #888888;}
 
 
 .lily-search-submit{
@@ -825,21 +827,14 @@ Typeahead Styles
   position: relative;
 }
 
-.lily-search-input {
-
-}
-
-.tt-suggestions {
-  z-index: 1;
-}
-
 .lily-box-messages.tt-overlay {
-  opacity: .2;
+  opacity: 0.1;
 }
 
-.tt-suggestions .tt-suggestion,
+.tt-suggestion,
 .empty-suggestion {
-  padding: 11px 9px;
+  /*padding: 11px 9px;*/
+  padding: 10px 15px;
   font-size: 15px;
   line-height: 1.3;
 }
@@ -849,7 +844,7 @@ Typeahead Styles
   font-size: 15.5px;
 }
 
-.tt-suggestions .tt-suggestion {
+.tt-suggestion {
   cursor: pointer;
   border-bottom: solid 1px #cecece;
 }
@@ -861,42 +856,38 @@ Typeahead Styles
   border-bottom: none;
 }
 
-.tt-suggestions .tt-suggestion:last-child {
+.tt-dataset-questions .tt-suggestion:last-child {
   border-bottom: none;
 }
 
-.tt-suggestions .tt-suggestion {
+.tt-suggestion {
   color: #494949;
 }
 
-.tt-suggestions .tt-suggestion:hover {
+.tt-suggestion:hover {
   color: #000;
 }
 
-.tt-suggestions .tt-cursor {
+.tt-cursor {
   background-color: rgba(165, 165, 165, 0.4);
 }
 .twitter-typeahead {
   width: 100%;
-  display: table!important;
 }
 
 /* Ugliest thing I ever had to write in css... :'( */
-.twitter-typeahead .tt-dropdown-menu {
+.twitter-typeahead .tt-menu {
   text-align: left;
-  left: -5px!important;
+  left: -13px!important;
   z-index: 100;
-  right: auto;
-  bottom: calc(100% + 10px);
-  width: calc(100% + 9px);
+  right: -5px;
+  min-width: 100%;
+  bottom: calc(100% + 9px);
   top: auto !important;
   background: #fff;
-  border-left: solid 1px #cecece;
-  border-right: solid 1px #cecece;
-  border-bottom: solid 1px #cecece;
-  border-radius: 10px;
-  box-shadow: 0 -3px 12px 1px rgba(178, 178, 178, 0.8);
-  overflow: hidden;
+  box-shadow: 0 -3px 9px -1px rgba(178, 178, 178, 0.6);
+  overflow: auto;
+  overflow-x: hidden;
 }
 
 /******************
@@ -947,25 +938,76 @@ MESSAGES
   left: 13px;
   width: 75px;
   height: 75px;
-  border: solid 1px #888888;
-  overflow: hidden;
   text-align: center;
-  border-radius: 50%;
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
   -ms-backface-visibility: hidden;
+  transition: transition: all 0.2s ease 0s;
+  -webkit-transition: all 0.2s ease 0s;
+  opacity: 1;
+  z-index: 3;
+  background: none;
+  border-radius: 50%;
+}
+
+.avatar-wrapper.overlay {
+  z-index: 5;
+  /*box-shadow: 0 0 8px 0px #818181;*/
+}
+
+.avatar-overflowhide {
+  width: 75px;
+  height: 75px;
+  overflow: hidden;
+  border: solid 1px #888888;
+  border-radius: 50%;
+  background: #FFF;
+}
+
+.avatar-wrapper.overlay:after {
+  content: 'Que voulez vous savoir ? Je suis là pour répondre à vos questions!';
+  position: relative;
+  left: 100%;
+  top: -100%;
+  width: 200px;
+  height: auto;
+  background: rgba(238, 206, 207, 1);
+  z-index: 1000;
+  margin-left: 8px;
+  padding: 5px 8px 7px;
+  border-radius: 10px;
+  line-height: 1.3;
+  font-size: 15px;
+  text-align: left;
+  display: block;
+}
+
+.avatar-wrapper.overlay:before {
+  content: "";
+  position: absolute;
+  left: 100%;
+  top: 40%;
+  margin-left: 2px;
+  background: none;
+  z-index: 1000;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 5px 8.7px 5px 0;
+  border-color: transparent #eececf transparent transparent;
+  display: inline-block;
 }
 
 .avatar-wrapper.lily-avi-show {
-  -webkit-animation: bubbleIn .4s cubic-bezier(0.25, 0.1, 0, 1.46) both;
-  -moz-animation: bubbleIn .4s cubic-bezier(0.25, 0.1, 0, 1.46) both;
-  animation: bubbleIn .4s cubic-bezier(0.25, 0.1, 0, 1.46) both;
+  -webkit-animation: bubbleIn .25s cubic-bezier(0.25, 0.1, 0.13, 1.31) both;
+  -moz-animation: bubbleIn .25s cubic-bezier(0.25, 0.1, 0.13, 1.31) both;
+  animation: bubbleIn .25s cubic-bezier(0.25, 0.1, 0.13, 1.31) both;
 }
 
 .avatar-wrapper.lily-avi-hide {
-  -webkit-animation: bubbleOut .4s  cubic-bezier(0.25, 0.1, 0, 1.46) both;
-  -moz-animation: bubbleOut .4s cubic-bezier(0.25, 0.1, 0, 1.46) both;
-  animation: bubbleOut .4s cubic-bezier(0.25, 0.1, 0, 1.46) both;
+  -webkit-animation: bubbleOut .2s  cubic-bezier(0.25, 0.1, 0, 1.46) both;
+  -moz-animation: bubbleOut .2s cubic-bezier(0.25, 0.1, 0, 1.46) both;
+  animation: bubbleOut .2s cubic-bezier(0.25, 0.1, 0, 1.46) both;
 }
 
 .avatar-wrapper .avatar {
@@ -1880,6 +1922,7 @@ CONTACT FORM
   position: relative;
   top: 2px;
   margin-left: 1px;
+  opacity: 1;
 }
 
 /*******************
@@ -2015,20 +2058,19 @@ ANIMATIONS
   from { transform: translateY(30px); opacity: .5}
 }
 @-webkit-keyframes bubbleIn {
-  from { -webkit-transform: scale(.7); opacity: 0 }
+  from { -webkit-transform: scale(.8); opacity: .5 }
   to { -webkit-transform: scale(1); opacity: 1;}
 }
-
 @keyframes bubbleIn {
-  from { transform: scale(.7); opacity: 0 }
+  from { transform: scale(.8); opacity: .5 }
   to { transform: scale(1); opacity: 1;}
 }
 @-webkit-keyframes bubbleIn {
-  from { -webkit-transform: scale(.7); opacity: 0 }
+  from { -webkit-transform: scale(.8); opacity: .5 }
   to { -webkit-transform: scale(1); opacity: 1;}
 }
 @-moz-keyframes bubbleIn {
-  from { -moz-transform: scale(.7); opacity: 0 }
+  from { -moz-transform: scale(.8); opacity: .5 }
   to { -moz-transform: scale(1); opacity: 1;}
 }
 
